syntax = "proto3";

option csharp_namespace = "Makc.Dummy.Integration.MicroserviceReader.Infrastructure.Grpc.AppIncomingEventPayload";

package Reader;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service AppIncomingEventPayload {
    rpc Create (AppIncomingEventPayloadCreateGrpcRequest) returns (AppIncomingEventPayloadGetGrpcReply);
    rpc Delete (AppIncomingEventPayloadDeleteGrpcRequest) returns (google.protobuf.Empty);
    rpc Get (AppIncomingEventPayloadGetGrpcRequest) returns (AppIncomingEventPayloadGetGrpcReply);
    rpc GetList (AppIncomingEventPayloadGetListGrpcRequest) returns (AppIncomingEventPayloadGetListGrpcReply);
    rpc GetPage (AppIncomingEventPayloadGetPageGrpcRequest) returns (AppIncomingEventPayloadGetPageGrpcReply);
    rpc Update (AppIncomingEventPayloadUpdateGrpcRequest) returns (AppIncomingEventPayloadGetGrpcReply);
}

message ActionRequestSort {
    string field = 1;
    bool is_desc = 2;
}

message ActionRequestPage {
    int32 number = 1;
    int32 size = 2;
}

message AppIncomingEventPayloadCreateGrpcRequest {
    string app_incoming_event_object_id = 1;
    google.protobuf.StringValue data = 2;
    google.protobuf.StringValue entity_concurrency_token_to_delete = 3;
    google.protobuf.StringValue entity_concurrency_token_to_insert = 4;
    string entity_id = 5;
    string entity_name = 6;
    string event_payload_id = 7;
    int32 position = 8;
}

message AppIncomingEventPayloadDeleteGrpcRequest {
    string object_id = 1;
}

message AppIncomingEventPayloadGetGrpcRequest {
    string object_id = 1;
}

message AppIncomingEventPayloadGetGrpcReply {
    string app_incoming_event_object_id = 1;
    google.protobuf.StringValue data = 2;
    google.protobuf.StringValue entity_concurrency_token_to_delete = 3;
    google.protobuf.StringValue entity_concurrency_token_to_insert = 4;
    string entity_id = 5;
    string entity_name = 6;
    string event_payload_id = 7;
    int32 position = 8;
    string object_id = 9;
    string concurrency_token = 10;
    google.protobuf.Timestamp created_at = 11;
}

message AppIncomingEventPayloadGetListGrpcRequestFilter {
    google.protobuf.StringValue full_text_search_query = 1;
}

message AppIncomingEventPayloadGetListGrpcRequest {
    int32 max_count = 1;
    ActionRequestSort sort = 2;
    AppIncomingEventPayloadGetListGrpcRequestFilter filter = 3;
}

message AppIncomingEventPayloadGetListGrpcReplyItem {
    string app_incoming_event_object_id = 1;
    google.protobuf.StringValue data = 2;
    google.protobuf.StringValue entity_concurrency_token_to_delete = 3;
    google.protobuf.StringValue entity_concurrency_token_to_insert = 4;
    string entity_id = 5;
    string entity_name = 6;
    string event_payload_id = 7;
    int32 position = 8;
    string object_id = 9;
    string concurrency_token = 10;
    google.protobuf.Timestamp created_at = 11;
}

message AppIncomingEventPayloadGetListGrpcReply {    
    repeated AppIncomingEventPayloadGetListGrpcReplyItem items = 1;
}

message AppIncomingEventPayloadGetPageGrpcRequest {
    ActionRequestPage page = 1;
    ActionRequestSort sort = 2;
    AppIncomingEventPayloadGetListGrpcRequestFilter filter = 3;
}

message AppIncomingEventPayloadGetPageGrpcReply {    
    repeated AppIncomingEventPayloadGetListGrpcReplyItem items = 1;
    int64 total_count = 2;
}

message AppIncomingEventPayloadUpdateGrpcRequest {    
    string app_incoming_event_object_id = 1;
    google.protobuf.StringValue data = 2;
    google.protobuf.StringValue entity_concurrency_token_to_delete = 3;
    google.protobuf.StringValue entity_concurrency_token_to_insert = 4;
    string entity_id = 5;
    string entity_name = 6;
    string event_payload_id = 7;
    int32 position = 8;
    string object_id = 9;
}